# combwriter

./: .gitignore  README.md  caps.scad  connectors.scad  diode.scad  keycap_base.scad  layout.scad  makefile  matrix_left.scad  matrix_right.scad  mx_switch.scad  pin_header.scad  plateR_1_bot.scad  plateR_2_col.scad  plateR_3_mid.scad  plateR_4_row.scad  plateR_5_top1.scad  plateR_6_top2.scad  print_keycaps.scad  print_plate.scad  proto_board.scad
firmware/: Cargo.toml
firmware/esp32c3/: Cargo.toml
firmware/esp32c3/src/: colscanner.rs  main.rs  rowscanner.rs  scan_key.rs
firmware/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  map.rs
simple_driver/: Cargo.toml
simple_driver/src/: main.rs
solids/: makefile
solids/src/case/: case.scad
solids/src/keycaps/: 1_text.scad  2_top.scad  3_body.scad  base.scad  proto_board.scad
solids/src/layout/: layout.scad  positions.scad
solids/src/layout/text/: neo.scad
solids/src/plate/: 1_bot.scad  2_col.scad  3_mid.scad  4_row.scad  5_top1.scad  6_top2.scad  preview.scad
solids/src/stencils/: connectors.scad  diode.scad  joystick.scad  matrix_left.scad  matrix_right.scad  mx_switch.scad  pin_header.scad
